fix: home hero layout (#349)
* fix: begins home hero layout adjustments

* chore: renames some vars

* chore: gives contentWrapper an aspect ratio to prevent layout shift on render

* chore: misc adjustments to spacing above content

--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -8,9 +8,9 @@ $breakpoint-xs-width: 400px;
 $breakpoint-s-width: 768px;
 $breakpoint-m-width: 1024px;
 $breakpoint-mh-width: 1170px;
+$breakpoint-mp-width: 1200px;
 $breakpoint-lm-width: 1400px;
 $breakpoint-l-width: 1600px;
-$breakpoint-lp-width: 1750px;
 $breakpoint-xl-width: 1920px;
 $breakpoint-2xl-width: 2250px;
 
@@ -18,10 +18,7 @@ $breakpoint-2xl-width: 2250px;
 // BREAKPOINTS (HEIGHT)
 //////////////////////////////
 
-$breakpoint-s-height: 750px;
 $breakpoint-l-height: 1000px;
-$breakpoint-xl-height: 1200px;
-$breakpoint-2xl-height: 1350px;
 
 //////////////////////////////
 // SHADOWS
